--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"require" : {
-		"monolog/monolog" : "1.0.*",
-		"geekcom/phpjasper" : "3.0.*"
+		"monolog/monolog" : "^1.24",
+		"geekcom/phpjasper" : "^3.0"
 	}
 }
